fix filter product, response object